# bench-slopes

./: .gitignore  README.md  autogen.sh  configure.ac
src/: Makefile.am  bench-slope-botan.cpp  bench-slope-cryptopp.cpp  bench-slope-gcrypt.c  bench-slope-nettle.c  bench-slope-openssl.c  plot_raw_results.sh.in  slope.c  slope.h
